--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shipazon</title>
+    <title>Ecommerce Webiste</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     
 </head>
@@ -40,7 +40,7 @@
    </div>
 <div class="container">
     <div id="types-of-products">
-        <h2>Types of products we sell</h2>
+        <h2>Types of product we sell</h2>
         <h3>Smartphones</h3>
 
               <a href="/apple/apple.html"> <p><button class="btn1">Apple</button></p></a> 
